--- a/css/_home.scss
+++ b/css/_home.scss
@@ -499,6 +499,13 @@ $orange-light: #ffdcbc;
       max-width: 500px;
     }
 
+    div { 
+      display: flex;
+
+      &:nth-of-type(1) { 
+        flex-direction: column;
+      }
+    }
     .text {
       font-size: 25px;
       line-height: 25px; /* 100% */
