--- a/css/main.css
+++ b/css/main.css
@@ -1280,6 +1280,12 @@ section {
   font-weight: 300;
   max-width: 500px;
 }
+.training .training-top div {
+  display: flex;
+}
+.training .training-top div:nth-of-type(1) {
+  flex-direction: column;
+}
 .training .training-top .text {
   font-size: 25px;
   line-height: 25px; /* 100% */
@@ -2330,17 +2336,31 @@ section {
   .training .training-top .sub-title {
     font-size: 14px;
     line-height: 16px; /* 114.286% */
-    max-width: 190px;
+    max-width: 200px;
+  }
+  .training .training-top div:nth-of-type(2) {
+    align-items: end;
   }
   .training .training-top .text {
     font-size: 16px;
     line-height: 18px; /* 112.5% */
   }
   .training .training-top .decor {
-    padding-top: 25px;
+    padding-top: 0px;
+    margin-left: 20px;
+    margin-top: -11px;
+  }
+  .training .training-top .decor.desck {
+    display: none;
+  }
+  .training .training-top .decor.mobile {
+    display: block;
   }
   .training .training-top .goblet {
-    margin: auto 7px auto 15px;
+    margin: 0;
+    margin-right: 8px;
+    transform: rotate(12.164deg);
+    max-width: 39px;
   }
   .training h2 span {
     color: #5668e6;
@@ -2443,6 +2463,45 @@ section {
     position: absolute;
     right: -22px;
     height: auto;
+  }
+  .training .training-bottom {
+    border-radius: 20px;
+    margin-top: 100px;
+    padding: 50px 30px 0 30px;
+  }
+  .training .training-bottom .img-bonus {
+    max-width: 230px;
+    margin-bottom: 20px;
+  }
+  .training .training-bottom .img-phone {
+    position: inherit;
+    left: 50%;
+    margin-top: 20px;
+    transform: translate(-50%, 0);
+    min-width: calc(100% + 60px);
+    height: 100%;
+    top: 0;
+  }
+  .training .training-bottom .img-phone.desck {
+    display: none;
+  }
+  .training .training-bottom .img-phone.mobile {
+    display: block;
+  }
+  .training .training-bottom p {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .training .training-bottom .button {
+    margin-top: 30px;
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    line-height: 10px; /* 62.5% */
+    letter-spacing: -0.32px;
+  }
+  .training .training-bottom .button::after {
+    display: none;
   }
   /* rates section */
   .rates {
