--- a/css/_home.scss
+++ b/css/_home.scss
@@ -540,12 +540,17 @@ $orange-light: #ffdcbc;
   }
 
   .items {
-    margin-top: 50px;
+    margin-top: 20px;
   }
 
   .slider-training {
+    .slick-list { 
+      padding-top: 30px;
+    }
     .slick-track {
       gap: 20px;
+      overflow: visible;
+
     }
 
     /* Стрелка */
@@ -554,8 +559,7 @@ $orange-light: #ffdcbc;
       height: 60px;
       width: 60px;
       background-color: $purple;
-
-      top: -110px;
+      top: -80px;
     }
 
     /* Стрелка влево */
@@ -638,7 +642,7 @@ $orange-light: #ffdcbc;
       }
     }
 
-    &:nth-child(6) {
+    &:nth-child(7) {
       .body {
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         padding-top: 14px;
@@ -1012,13 +1016,13 @@ $orange-light: #ffdcbc;
   }
 
   .items {
-    margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 40px;
 
+    .slick-list { 
+      padding-top: 70px;
+    }
     .slick-track {
-      max-width: 100%;
-      justify-content: center;
+      overflow: visible;
     }
 
     /* Стрелка */
@@ -1037,11 +1041,11 @@ $orange-light: #ffdcbc;
     }
     /* Стрелка влево */
     .slick-arrow.slick-prev {
-      right: 60px;
+      right: 110px;
     }
 
     .slick-arrow.slick-next {
-      right: 0;
+      right: 50px;
     }
 
     .speaker {
