--- a/css/_media.scss
+++ b/css/_media.scss
@@ -121,6 +121,12 @@ $white: #fefefe;
       grid-template-columns: 57px auto;
       gap: 10px 14px;
 
+      .icon-block {
+        img { 
+          max-width: 85%;
+        }
+      }
+
       h4 {
         font-size: 20px;
         line-height: 18px; /* 90% */
@@ -559,6 +565,7 @@ $white: #fefefe;
       border-radius: 20px;
       margin-top: 100px;
       padding: 50px 30px 0 30px;
+      overflow: hidden;
 
       &::after { 
         display: none;
@@ -574,7 +581,7 @@ $white: #fefefe;
         left: 50%;
         margin-top: 20px;
         transform: translate(-50%, 0);
-        min-width: calc(100% + 60px);
+        min-width: calc(100% + 80px);
         height: 100%;
         top: 0;
 
