--- a/css/main.css
+++ b/css/main.css
@@ -977,7 +977,6 @@ section {
   border-radius: 15px;
   background: linear-gradient(180deg, #b795ff 0%, #8656e6 100%);
   grid-row: 1/3;
-  height: 100%;
   position: relative;
 }
 .about-block .icon-block img {
@@ -1622,6 +1621,14 @@ section {
   line-height: normal;
   text-transform: uppercase;
 }
+.rates .rate .cost .text {
+  text-transform: none;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px; /* 125% */
+  margin-top: 30px;
+}
 .rates .rate .cost-full {
   margin-bottom: 6px;
   position: relative;
@@ -1678,6 +1685,9 @@ section {
   margin-top: 10px;
   align-self: end;
 }
+.rates .rate:nth-child(1) .cost .text {
+  color: #6736d0;
+}
 .rates .rate:nth-child(1) .button {
   background-color: #6736d0;
 }
@@ -1694,6 +1704,9 @@ section {
 }
 .rates .rate:nth-child(1) .header {
   background-color: #6736d0;
+}
+.rates .rate:nth-child(2) .cost .text {
+  color: #ff6b00;
 }
 .rates .rate:nth-child(2) .header {
   background-color: #ff6b00;
@@ -2139,6 +2152,9 @@ section {
     grid-template-columns: 57px auto;
     gap: 10px 14px;
   }
+  .about-block .item .icon-block img {
+    max-width: 85%;
+  }
   .about-block .item h4 {
     font-size: 20px;
     line-height: 18px; /* 90% */
@@ -2503,6 +2519,7 @@ section {
     border-radius: 20px;
     margin-top: 100px;
     padding: 50px 30px 0 30px;
+    overflow: hidden;
   }
   .training .training-bottom::after {
     display: none;
@@ -2516,7 +2533,7 @@ section {
     left: 50%;
     margin-top: 20px;
     transform: translate(-50%, 0);
-    min-width: calc(100% + 60px);
+    min-width: calc(100% + 80px);
     height: 100%;
     top: 0;
   }
